@@ -40,7 +40,6 @@ NOTE: sorry, this is very raw :)
 ************************* NEW FEATURES TO ADD: *************************
 
 * score print :
-    - Show ottava bassa/alta signs
     - red images
     ? allow setting font size, number of lines per page, zoom, etc...
     * add non-linear printing...
